After refactoring. Removed inMemory