@@ -1,5 +1,6 @@
 package ru.yandex.practicum.filmorate.service;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
@@ -12,8 +13,8 @@ import ru.yandex.practicum.filmorate.storage.mpa.MpaStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class FilmService {
     @Autowired
@@ -22,6 +23,7 @@ public class FilmService {
     @Qualifier("UserDbStorage")
     private final UserStorage userStorage;
     private final LikeStorage likeStorage;
+    private final GenreService genreService;
     private final DirectorService directorService;
 
     public FilmService(@Qualifier("FilmDbStorage") FilmStorage filmStorage,
@@ -29,15 +31,22 @@ public class FilmService {
                        MpaStorage mpaStorage,
                        GenreStorage genreStorage,
                        LikeStorage likeStorage,
+                       GenreService genreService,
                        DirectorService directorService) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
         this.likeStorage = likeStorage;
+        this.genreService = genreService;
         this.directorService = directorService;
     }
 
     public Film addFilm(Film film) {
-        return filmStorage.addFilm(film);
+        film = filmStorage.addFilm(film);
+
+        if (!film.getGenres().isEmpty()) {
+            genreService.putGenre(film.getGenres(), film.getId());
+        }
+        return film;
     }
 
     public List<Film> getFilms() {
@@ -50,6 +59,11 @@ public class FilmService {
             throw new NotFoundFilmException("Не найден фильм в методе updateFilm по id ", film.getId());
         }
 
+        if (!film.getGenres().isEmpty()) {
+            genreService.deleteGenre(film.getId());
+            genreService.putGenre(film.getGenres(), film.getId());
+        }
+
         if (!film.getDirectors().isEmpty()) {
             directorService.deleteDirectorsFromFilm(film.getId());
             directorService.putDirectorsToFilm(film.getDirectors(), film.getId());
@@ -58,9 +72,6 @@ public class FilmService {
     }
 
     public Film putLikeToFilm(long filmId, long userId) {
-        if (!filmStorage.containsFilmById(filmId)) {
-            throw new NotFoundFilmException("Не найден фильм в методе putLikeToFilm по filmId ", filmId);
-        }
         if (!userStorage.containsUserById(userId)) {
             throw new NotFoundUserByIdException("Не найден пользователь в методе putLikeToFilm по userId ", userId);
         }
@@ -70,10 +81,15 @@ public class FilmService {
 
         likeStorage.putLike(userId, filmId);
 
-        return filmStorage.getFilm(filmId);
+        Film film = filmStorage.getFilm(filmId).orElseThrow(() -> {
+            log.warn("FilmService, putLikeToFilm, фильм с id {} не найден", filmId);
+            throw new NotFoundFilmException(String.format("Фильм с id %d не найден", filmId), filmId);
+        });
+
+        return addData(film);
     }
 
-    public Film deleteLiketoFilm(long filmId, long userId) {
+    public Film deleteLikeToFilm(long filmId, long userId) {
         if (!filmStorage.containsFilmById(filmId)) {
             throw new NotFoundFilmException("Не найден фильм в методе deleteLiketoFilm по filmId ", filmId);
         }
@@ -81,16 +97,29 @@ public class FilmService {
             throw new NotFoundUserByIdException("Не найден пользователь в методе deleteLiketoFilm по userId ", userId);
         }
         likeStorage.deleteLike(filmId, userId);
-        return filmStorage.getFilm(filmId);
+        Film film = filmStorage.getFilm(filmId).orElseThrow(() -> {
+            log.warn("FilmService, deleteLikeToFilm, фильм с id {} не найден", filmId);
+            throw new NotFoundFilmException(String.format("Фильм с id %d не найден", filmId), filmId);
+        });
+        return addData(film);
     }
 
     public List<Film> getPopularFilmList(int count) {
-        return filmStorage.getPopularFilmList(count).stream()
-                .collect(Collectors.toList());
+        List<Film> films = filmStorage.getPopularFilmList(count);
+        for (Film film : films) {
+            film.setLikesCount(filmStorage.getLikeListsByFilmId(film.getId()));
+        }
+        return films.stream()
+                .sorted(Comparator.comparing(Film::getLikesCount).reversed())
+                .toList();
     }
 
-    public Film getFilmWithGenreById(long genreId) {
-        return filmStorage.getFilm(genreId);
+    public Film getFilmWithGenreById(long id) {
+        Film film = filmStorage.getFilm(id).orElseThrow(() -> {
+            log.warn("FilmService, getFilmWithGenreById, фильм с id {} не найден", id);
+            throw new NotFoundFilmException(String.format("Фильм с id %d не найден", id), id);
+        });
+        return addData(film);
     }
 
     public List<Film> getFilmsByDirectorSorted(long directorId, String sortedBy) {
@@ -103,6 +132,7 @@ public class FilmService {
     }
 
     private Film addData(Film film) {
+        film.setGenres(genreService.getGenresByFilmId(film.getId()));
         film.setDirectors(directorService.getDirectorsByFilmId(film.getId()));
         return film;
     }
